vlib/v/checker/tests/cast_sumtype_err.vv
module main

type Test = int | u32 | f32

fn main() {
    data := Test(12)
    eprintln(int(data))
}
